// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`auth.register > functionality > email sent if active 1`] = `
{
  "added": {
    "accounts": {
      "id:de5ea241-44ca-47ef-a736-a5ac82459079": {
        "avatarUrl": null,
        "confirmationToken": "f0bc24b0-e797-4768-a3e0-1abbfff5172c",
        "confirmationTokenTimestamp": "2020-01-01 00:00:00+00",
        "createdAt": "2020-01-01 00:00:00+00",
        "email": "stanley.greenfelder27@yahoo.com",
        "id": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "passwordHash": "543dc4ca36a69bef4258bf0a360591e3497a7fe2818d618d36044e63c2ab00c697dbfc93d12e42a17dc82b8b733a0b496ab05d97ccd8fdfa22aae83a2940aa71",
        "passwordSalt": "8eb97beb90d65352743a847afae2d45cebfce8224eb1de716ce0615720fe986ef36ebefaf3fcbccdb1c00a1d6fcabd5eacfb9e2c3fdcdb393da494b1e9df4f61",
        "role": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "sessions": {
      "sessionId:a25a8574-a877-4f39-83eb-25b7b69c7342": {
        "accountId": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "botUserId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "expirationTimestamp": "2020-01-31 00:00:00+00",
        "sessionId": "a25a8574-a877-4f39-83eb-25b7b69c7342",
      },
    },
    "peers": {
      "id:de5ea241-44ca-47ef-a736-a5ac82459079": {
        "acceptReceipts": true,
        "connectedAccountId": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": true,
        "id": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "name": "Amari",
        "ownerAccountId": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "publicName": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "sessions": {
      "sessionId:a25a8574-a877-4f39-83eb-25b7b69c7342": {
        "accountId": "de5ea241-44ca-47ef-a736-a5ac82459079",
        "createdAt": "2020-01-01 00:00:00+00",
        "expirationTimestamp": "2020-01-31 00:00:00+00",
        "sessionId": "a25a8574-a877-4f39-83eb-25b7b69c7342",
      },
    },
  },
}
`;

exports[`auth.register > functionality > email sent if active 2`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
    <style></style>
  </head>
  <body style="background-color:rgb(234,235,237);margin:0">
    <!--$--><!--html--><!--head-->
    <div
      style="display:none;overflow:hidden;line-height:1px;opacity:0;max-height:0;max-width:0"
      data-skip-in-text="true">
      Receipt App confirm email
      <div>
         ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿
      </div>
    </div>
    <!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            style='background-color:rgb(234,235,237);margin:0;font-family:ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-size:14px;line-height:1.4'>
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="max-width:36.25rem;margin-right:auto;margin-left:auto;display:block;width:100%;padding:10px">
              <tbody>
                <tr style="width:100%">
                  <td>
                    <h1
                      style="color:rgb(6,9,15);margin:20px 0;text-align:center;font-size:35px;font-weight:300;text-transform:capitalize">
                      Receipt App
                    </h1>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="box-sizing:border-box;border-radius:3px;background-color:rgb(255,255,255);padding:20px">
                      <tbody>
                        <tr>
                          <td>
                            <h3
                              style="color:rgb(6,9,15);margin-bottom:10px;font-size:22px;font-weight:400">
                              ✨Welcome to Receipt App✨
                            </h3>
                            <p
                              style="font-size:14px;line-height:24px;margin-top:16px;margin-bottom:16px">
                              Happy counting!
                            </p>
                            <a
                              href="http://receipt-app.test/confirm-email?token=f0bc24b0-e797-4768-a3e0-1abbfff5172c"
                              style="line-height:20px;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;border-color:rgb(236,8,103);background-color:rgb(236,8,103);border-radius:0.375rem;border-style:solid;border-width:1px;padding-right:24px;padding-left:24px;padding-bottom:12px;padding-top:12px;font-size:14px;font-weight:700;color:rgb(255,255,255);text-transform:capitalize;text-decoration-line:none;margin-bottom:16px"
                              target="_blank"
                              ><span
                                ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:18" hidden>&#8202;&#8202;&#8202;</i><![endif]--></span
                              ><span
                                style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px"
                                >Confirm email</span
                              ><span
                                ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                              ></a
                            >
                            <p
                              style="font-size:14px;line-height:24px;margin-top:16px;margin-bottom:16px">
                              Didn’t register in Receipt App? Click below to
                              void your account.
                            </p>
                            <a
                              href="http://receipt-app.test/void-account?token=f0bc24b0-e797-4768-a3e0-1abbfff5172c"
                              style="line-height:20px;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;border-color:rgb(236,8,103);background-color:rgb(236,8,103);border-radius:0.375rem;border-style:solid;border-width:1px;padding-right:24px;padding-left:24px;padding-bottom:12px;padding-top:12px;font-size:14px;font-weight:700;color:rgb(255,255,255);text-transform:capitalize;text-decoration-line:none"
                              target="_blank"
                              ><span
                                ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:18" hidden>&#8202;&#8202;&#8202;</i><![endif]--></span
                              ><span
                                style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px"
                                >Void account</span
                              ><span
                                ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                              ></a
                            >
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="color:rgb(154,158,166);margin-top:8px;text-align:center;font-size:12px;line-height:16px">
                      <tbody>
                        <tr>
                          <td>
                            <p
                              style="font-size:12px;line-height:16px;color:rgb(154,158,166);margin:0;margin-bottom:16px;margin-top:0;margin-left:0;margin-right:0">
                              Contact us on receipt@luixo.me
                            </p>
                            <p
                              style="font-size:12px;line-height:16px;color:rgb(154,158,166);margin:0;margin-bottom:16px;margin-top:0;margin-left:0;margin-right:0">
                              You can click
                              <a
                                href="http://receipt-app.test/"
                                style="color:rgb(154,158,166);text-decoration-line:underline"
                                target="_blank"
                                >unsubscribe</a
                              >, but there is nothing to unsubscribe from.
                            </p>
                            <hr
                              style="width:100%;border:none;border-top:1px solid #eaeaea;border-style:solid;border-width:0px" />
                            <p
                              style="font-size:12px;line-height:16px;color:rgb(154,158,166);margin:0;margin-bottom:16px;margin-top:0;margin-left:0;margin-right:0">
                              Inspired by
                              <a
                                href="https://postdrop.io"
                                style="color:rgb(154,158,166);text-decoration-line:underline"
                                target="_blank"
                                >Postdrop</a
                              >.
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`auth.register > functionality > register successful 1`] = `
{
  "added": {
    "accounts": {
      "id:cd711995-3c83-40a3-945e-c6a067b3eb09": {
        "avatarUrl": null,
        "confirmationToken": null,
        "confirmationTokenTimestamp": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "email": "arthur22@yahoo.com",
        "id": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "passwordHash": "6af44c8628b0e676f969179dc7fcb6c0af0f289caad3f3f5933921b081fb2eaf2630f15d0deda3f9e58b5a2dc8541772ed03b79a5d4618fd769c604b1d3b57b6",
        "passwordSalt": "227c6db6e43edbdb9b32b2ab2721b8cab31fc50a8d4f7a580f42cc18de41dbb966a3c08efbedf7ad8e7f6c6febbcdb3bebaeae63cae3ed09fa52c403a24ef0c1",
        "role": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "sessions": {
      "sessionId:8cb55f42-26f8-4226-aae2-81cab61a1bcb": {
        "accountId": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "botUserId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "expirationTimestamp": "2020-01-31 00:00:00+00",
        "sessionId": "8cb55f42-26f8-4226-aae2-81cab61a1bcb",
      },
    },
    "peers": {
      "id:cd711995-3c83-40a3-945e-c6a067b3eb09": {
        "acceptReceipts": true,
        "connectedAccountId": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": true,
        "id": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "name": "Judge",
        "ownerAccountId": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "publicName": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "sessions": {
      "sessionId:8cb55f42-26f8-4226-aae2-81cab61a1bcb": {
        "accountId": "cd711995-3c83-40a3-945e-c6a067b3eb09",
        "createdAt": "2020-01-01 00:00:00+00",
        "expirationTimestamp": "2020-01-31 00:00:00+00",
        "sessionId": "8cb55f42-26f8-4226-aae2-81cab61a1bcb",
      },
    },
  },
}
`;
